2009-08-06  Chris Toshok  <toshok@ximian.com>

	* window-gtk.cpp: move the InvokeTickCalls from here...

	* runtime.cpp: to the HandleUI* methods here, so they will be used
	in both windowed and windowless codepaths.

2009-08-06  Chris Toshok  <toshok@ximian.com>

	* timemanager.h|cpp (TimeManager::RemoveTickCall): this takes
	another argument now (the data object passed to AddTickCall) so we
	can differentiate callbacks properly.

	* runtime.h|cpp (Surface::Attach): we don't return true from
	IsLoaded until after the first tick, so that our measure pass has
	been run (and contentpresenters are created for all content
	controls.)  register the tick call here (after removing any that
	may have already been added).
	(Surface::tick_after_attach_reached): set ticked_after_attach to
	true.
	(Surface::IsLoaded): we require ticked_after_attach to be true
	here.

	* cbinding.h|cpp: regen.

2009-08-06  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::OnFocusOut): Instead of clearing the
	selection, just set the selection to the cursor position. This
	way, if the control gets programatically Focus()'d again, then the
	cursor will be where it was just before the control lost
	focus. Partial fix for drt 2003.

2009-08-06  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|xaml.h: Add bindings for checking/setting whether a
	property has already been set.
	
2009-08-06  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Its possible that a buffered element can add a new
	namespace that start_element_handler will not know about, just
	ignore this error and the namespace will be added when the buffer
	is parsed.

2009-08-06  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Handle null in the print_tree debug code. (This can
	occur when loading a null template)

2009-08-05  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp (UpdateLayout): revert an accidental
	change.

2009-08-05  Jeffrey Stedfast  <fejj@novell.com>
